infra/k8s/deploy.yaml
#@ load("@ytt:template", "template")
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  labels: #@ data.values.defaultLabels
spec:
  replicas: 1
  selector:
    matchLabels:
      deployname: #@ data.values.name
  template:
    metadata:
      labels:
        _: #@ template.replace(data.values.defaultLabels)
        deployname: #@ data.values.name
    spec:
      serviceAccountName: cloud-storage-access
      containers:
      - name: #@ data.values.name
        image: #@ "europe-west3-docker.pkg.dev/healthy-saga-329513/sltech-briq/" + data.values.image_name + ":" + data.values.image_tag
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: #@ data.values.resources.cpu
            memory: #@ data.values.resources.memory
        #@ #command: ["gunicorn"]
        #@ #args: ["briq_api.proxy_fapi:app", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:5000"]
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.indexer.name
  labels: #@ data.values.defaultLabels
spec:
  replicas: 1
  selector:
    matchLabels:
      deployname: #@ data.values.indexer.name
  template:
    metadata:
      labels:
        _: #@ template.replace(data.values.defaultLabels)
        deployname: #@ data.values.indexer.name
    spec:
      containers:
      #@ # This should match configuration.toml -> TODO do this automagically
      - name: "mongo"
        image: #@ data.values.indexer.image_store
        ports:
        - containerPort: 27017
          name: "mongo"
        resources:
          requests:
            cpu: #@ data.values.indexer.resources.cpu_store
            memory: #@ data.values.indexer.resources.memory_store 
        #@ # livenessProbe:
        #@ #   httpGet:
        #@ #     path: /health
        #@ #     port: 5000
        #@ #   initialDelaySeconds: 5
        #@ #   periodSeconds: 10
        #@ #   failureThreshold: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.indexer.name + "-runner"
  labels: #@ data.values.defaultLabels
spec:
  replicas: 1
  selector:
    matchLabels:
      deployname: #@ data.values.indexer.name + "-runner"
  template:
    metadata:
      labels:
        _: #@ template.replace(data.values.defaultLabels)
        deployname: #@ data.values.indexer.name + "-runner"
    spec:
      containers:
      - name: "indexer-runner"
        image: #@ "europe-west3-docker.pkg.dev/healthy-saga-329513/sltech-briq/" + data.values.image_name + ":" + data.values.image_tag
        resources:
          requests:
            cpu: #@ data.values.indexer.resources.cpu_runner
            memory: #@ data.values.indexer.resources.memory_runner 
        command: ["python3"]
        args: ["-m", "briq_api.indexer.runner"]
        #@ # livenessProbe:
        #@ #   httpGet:
        #@ #     path: /health
        #@ #     port: 5000
        #@ #   initialDelaySeconds: 5
        #@ #   periodSeconds: 10
        #@ #   failureThreshold: 2
