infra/k8s/service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  labels: #@ data.values.defaultLabels
  annotations:
    cloud.google.com/backend-config: #@ '{"default": "' + data.values.name + '"}'
spec:
  selector:
    deployname: #@ data.values.name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.indexer.name
  labels: #@ data.values.defaultLabels
spec:
  selector:
    deployname: #@ data.values.indexer.name
  ports:
    - port: 27017
      targetPort: mongo
      name: mongo
    - port: 7171
      targetPort: apibara-backend
      name: apibara-backend
